--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  width: 75vw;
+  width: 80vw;
   margin-top: 100px;
   border-top: 1px solid #d8d8d8;
   border-bottom: 1px solid #d8d8d8;
@@ -12,5 +12,22 @@
   .index__wrapper {
     flex-direction: column;
     align-items: center;
+  }
+}
+
+@media (max-width: 630px) {
+  form.signUpForm {
+    width: 80vw;
+  }
+
+  .index__wrapper .aboutMe img,
+  .index__wrapper .aboutMe .learn-more,
+  form.signUpForm .signUpForm__group > input,
+  form.signUpForm > button {
+    width: 100%;
+  }
+
+  .aboutMe > p {
+    max-width: none;
   }
 }
